--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/formidable": "^3.4.1",
 		"@types/jsonwebtoken": "^9.0.2",
-		"@types/mysql": "^2.15.21"
+		"@types/mysql": "^2.15.21",
+		"encoding": "^0.1.13"
 	}
 }
