--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react": "18.2.18",
 		"@types/react-dom": "18.2.7",
 		"@types/react-slick": "^0.23.10",
+		"@vercel/analytics": "^1.0.2",
 		"autoprefixer": "10.4.14",
 		"axios": "^1.4.0",
 		"bcryptjs": "^2.4.3",
