--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"react-tooltip": "^5.21.1",
 		"slick-carousel": "^1.8.1",
 		"tailwindcss": "3.3.3",
-		"typescript": "5.1.6"
+		"typescript": "5.1.6",
+		"ytdl-core": "^4.11.5"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
