--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"formidable": "^3.5.0",
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.3",
+		"music-metadata": "^8.1.4",
 		"next": "13.4.13",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
@@ -35,6 +36,7 @@
 		"slick-carousel": "^1.8.1",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.1.6",
+		"ws": "^8.13.0",
 		"ytdl-core": "^4.11.5"
 	},
 	"devDependencies": {
@@ -42,6 +44,7 @@
 		"@types/formidable": "^3.4.1",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/mysql": "^2.15.21",
+		"@types/ws": "^8.5.5",
 		"encoding": "^0.1.13"
 	}
 }
