--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongoose": "^7.4.3",
 		"music-metadata": "^8.1.4",
 		"next": "13.4.13",
+		"next-seo": "^6.1.0",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-audio-player": "^0.17.0",
